docs/versioned_docs/version-0.18.3/how-update.md
---
sidebar_position: 7
title: Updating
description: Update a standalone or Composer installation without disabling transport security.
---

# Update the scanner

Use the update method that matches the installation method.

## Standalone release

The built in updater keeps the current filename:

```bash
php scanner --update
php scanner --version
```

You can also replace the file from the [latest GitHub release](https://github.com/marcocesarato/PHP-Antimalware-Scanner/releases):

```bash
curl --fail --silent --show-error --location \
  --output scanner.new \
  https://raw.githubusercontent.com/marcocesarato/PHP-Antimalware-Scanner/master/dist/scanner

php scanner.new --version
mv scanner.new scanner
```

On Windows PowerShell, replace the last command with `Move-Item -Force scanner.new scanner`.

:::caution Keep TLS verification enabled
Do not bypass certificate checks while downloading an executable scanner. Fix the system trust store or network configuration when verification fails.
:::

## Composer installation

Update the package through Composer:

```bash
composer update marcocesarato/amwscan
composer show marcocesarato/amwscan
```

Commit the resulting `composer.lock` change when the scanner belongs to a project. This keeps development and continuous integration on the same version.

## After updating

Run a report scan against a known project and compare the result with the previous version before enabling automated file actions.
